--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 
   <!-- add plugins css -->
-  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="css/slick.css">
+  <!-- <link rel="stylesheet" href="css/slick.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css">
   <!-- add plugins css end -->
 
   <link rel="stylesheet" href="css/style.css">
@@ -23,7 +24,7 @@
 </head>
 
 <body>
-
+  <canvas class="grain"></canvas>
   <header>
     <div class="container">
       <div class="date-project">
@@ -61,8 +62,11 @@
 
   <section class="section-two">
     <div class="container">
-      <h2>Ты когда-нибудь замечала, как некоторые женщины мгновенно оказываются <span class="color-red">в центре
-          внимания,</span></h2>
+      <h2 class="title-decor wow animation-title cssanimation leFadeIn random">Ты когда-нибудь замечала, как некоторые
+        женщины
+        мгновенно
+        оказываются в центре
+        внимания,</h2>
       <div class="subtitle-box">
         <p>притягивают к себе взгляды всех мужчин и буквально <strong>заставляют их бороться за своё внимание?</strong>
           Эти женщины,
@@ -73,33 +77,318 @@
 
   <section class="">
     <div class="container">
-      <div class="row">
 
-      </div>
+    </div>
+  </section>
+
+
+  <section class="">
+    <div class="container">
+
     </div>
   </section>
 
   <section class="">
     <div class="container">
 
+    </div>
+  </section>
+
+  <section class="">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <section class="">
+    <div class="container">
+
+    </div>
+  </section>
+
+  <section class="program m-100">
+    <div class="container">
+      <h2>Программа интенсива</h2>
+
+      <div class="tabs w-100">
+        <ul class="tabs__caption my-ul">
+          <li class="active"><span>1 день</span></li>
+          <li><span>2 день</span></li>
+          <li><span>3 день</span></li>
+          <li><span>4 день</span></li>
+          <li><span>5 день</span></li>
+          <li><span>6 день</span></li>
+          <li><span>7 день</span></li>
+          <li><span>8 день</span></li>
+          <li><span>9 день</span></li>
+          <li><span>10 день</span></li>
+          <li><span>11 день</span></li>
+          <li>
+            <span class="item-click-text">
+              <img src="img/hand.svg" alt="">
+              Жми на каждый день и читай
+            </span>
+          </li>
+        </ul>
+        <div class="tabs__content active">
+          <div class="w-100">
+            <div class="program-content">
+              <div class="program-card">
+                <div class="program-card__icon"><img src="img/program-icon.svg" alt=""></div>
+                <h4>Утренняя практика</h4>
+                <div class="box-text">
+                  <p>Пробуждение дракона. Мы готовим наше тело и его тонкие системы к тому, чтобы не только принять, но
+                    и задержать энергию такого уровня.</p>
+                </div>
+                <div class="program-card__bg"><img src="img/program-bg1.svg" alt=""></div>
+              </div>
+              <div class="program-card">
+                <div class="program-card__icon"><img src="img/program-icon.svg" alt=""></div>
+                <h4>дневная настройка</h4>
+                <div class="box-text">
+                  <p>Небольшой аудиофайл о базовых принципах привлекательности.</p>
+                </div>
+                <div class="program-card__bg"><img src="img/program-bg2.svg" alt=""></div>
+              </div>
+              <div class="program-card">
+                <div class="program-card__icon"><img src="img/program-icon.svg" alt=""></div>
+                <h4>вечерняя практика</h4>
+                <div class="box-text">
+                  <p>Выравнивание. Это очень важно — мы учимся быстро распределять «чужеродную», но такую заманчивую
+                    энергию по телу, учимся делать ее своей собственностью.</p>
+                </div>
+                <div class="program-card__bg"><img src="img/program-bg3.svg" alt=""></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tabs__content">
+
+        </div>
+      </div>
+  </section>
+
+  <section class="advantages m-100">
+    <div class="container">
+      <h2>Преимущества интенсива</h2>
+
+      <div class="w-100">
+        <div class="row">
+          <div class="col-30 mb-20">
+            <div class="advantages-box">
+              <div class="advantages-box__icon"><img src="img/title-decor-white.svg" alt=""></div>
+              <h4>Безопасно и эффективно</h4>
+              <div class="box-text">
+                <p>Мы идем мягким и безопасным путем, без риска для психики и здоровья.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-30 mb-20">
+            <div class="advantages-box advantages-box-bg wow animate__animated animate__fadeIn">
+              <img src="img/adv-img1.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col-30 mb-20">
+            <div class="advantages-box">
+              <div class="advantages-box__icon"><img src="img/title-decor-white.svg" alt=""></div>
+              <h4>Комплексный подход</h4>
+              <div class="box-text">
+                <p>Ты не просто научишься притягивать внимание, но и глубоко изменишь отношение к себе.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-30 mb-20">
+            <div class="advantages-box advantages-box-bg wow animate__animated animate__fadeIn">
+              <img src="img/adv-img2.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col-30 mb-20">
+            <div class="advantages-box">
+              <div class="advantages-box__icon"><img src="img/title-decor-white.svg" alt=""></div>
+              <h4>Гарантированный результат</h4>
+              <div class="box-text">
+                <p>Этот интенсив — проверенный и эффективный метод. Уже тысячи женщин изменили свою жизнь, став яркими и
+                  притягательными.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-30 mb-20">
+            <div class="advantages-box advantages-box-bg wow animate__animated animate__fadeIn">
+              <img src="img/adv-img3.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="marquee">
+    <span class="track">Раскрой свою внутреннюю магию за 11 дней</span>
+    <span class="track">Раскрой свою внутреннюю магию за 11 дней</span>
+    <span class="track">Раскрой свою внутреннюю магию за 11 дней</span>
+    <span class="track">Раскрой свою внутреннюю магию за 11 дней</span>
+  </div>
+
+  <section class="why-sign m-100">
+    <div class="container">
+      <div class="why-sign__content">
+        <h2>Почему тебе стоит записаться?</h2>
+
+        <div class="w-100">
+          <div class="row">
+            <div class="col-50 mb-20">
+              <div class="why-sign-card">
+                <div class="why-sign-card__icon"><img src="img/why-icon1.svg" alt=""></div>
+                <h5>Ты не чувствуешь себя привлекательной?</h5>
+                <div class="box-text">
+                  <p>Этот интенсив изменит твоё восприятие себя и окружающих.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-50 mb-20">
+              <div class="why-sign-card">
+                <div class="why-sign-card__icon"><img src="img/why-icon2.svg" alt=""></div>
+                <h5>Никто давно не влюблялся в тебя?</h5>
+                <div class="box-text">
+                  <p>Открой в себе ту магнетическую силу, которая притягивает любовь.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-50 mb-20">
+              <div class="why-sign-card">
+                <div class="why-sign-card__icon"><img src="img/why-icon3.svg" alt=""></div>
+                <h5>Ты хочешь стать <br>роковой женщиной?</h5>
+                <div class="box-text">
+                  <p>Узнай, что значит обладать настоящей животной привлекательностью.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-50 mb-20">
+              <div class="why-sign-card">
+                <div class="why-sign-card__icon"><img src="img/why-icon4.svg" alt=""></div>
+                <h5>Ты устала от однообразия?</h5>
+                <div class="box-text">
+                  <p>Этот интенсив подарит тебе новый источник энергии и уверенности.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <a href="#" class="btn btn-red w-100">Записаться на интенсив</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="reviews">
+    <div class="container">
+      <div class="reviews-content">
+        <h2>Отзывы и кейсы</h2>
+
+        <div class="w-100">
+          <div class="horizontal-scroll">
+            <div class="reviews-card">
+              <h3>Анна, 32 года</h3>
+              <div class="box-text">
+                <p>Я всегда думала, что красота — это только про внешность. Но после интенсива Марьяны я поняла, что
+                  настоящая сила — внутри. Я стала уверенной,
+                  и люди начали замечать меня, как никогда раньше!</p>
+              </div>
+            </div>
+            <div class="reviews-card">
+              <h3>Мария, 28 лет</h3>
+              <div class="box-text">
+                <p>Эти 11 дней изменили мое восприятие себя.
+                  Я наконец-то почувствовала, что могу быть той женщиной, которая притягивает взгляды и сердца.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="bonuses m-100">
+    <div class="container">
+      <h2>Бонусы</h2>
+      <div class="w-100 bonuses-wrapper">
+        <div class="bonuses-card bonuses-card1">
+          <div class="bonuses-card__img"><img src="img/bonus-img1.png" alt=""></div>
+          <div class="subtitle">{ бонус 1 }</div>
+          <h4>Медитация <br>
+            «Гармония внутри»</h4>
+          <div class="box-text">
+            <p>Специальная медитация для глубинной работы с собой.</p>
+          </div>
+        </div>
+
+        <div class="bonuses-card bonuses-card2">
+          <div class="subtitle">{ бонус 1 }</div>
+          <h4>Чек-лист <br>
+            «Энергия на каждый день»</h4>
+          <div class="box-text">
+            <p>Полезные советы и практики, которые помогут тебе поддерживать высокий уровень энергии притяжения.</p>
+          </div>
+          <div class="bonuses-card__img"><img src="img/bonus-img2.png" alt=""></div>
+        </div>
+      </div>
     </div>
   </section>
 
   <section class="faq">
     <div class="container">
-<h2 class="animation-title">FAQ</h2>
+      <h2>FAQ</h2>
+
+      <div class="panel_heading">
+        <div class="block_title">
+          <h3>Я никогда не занималась эзотерикой. Подойдет ли мне этот интенсив?</h3>
+        </div>
+        <div class="block_hover">
+          <div class="box-text">
+            <p>Да, наш курс разработан так, чтобы подойти как новичкам, так и тем, кто уже знаком с энергетическими
+              практиками.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel_heading">
+        <div class="block_title">
+          <h3>Как быстро я увижу результат?</h3>
+        </div>
+        <div class="block_hover">
+          <div class="box-text">
+            <p>Уже на первых днях ты почувствуешь изменение в своем внутреннем состоянии. Полный результат будет заметен
+              к окончанию интенсива.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
-  <section class="">
+  <section class="chance m-100">
     <div class="container">
+      <div class="chance-content mb-20">
+        <h2 class="wow title-decor animation-title cssanimation leFadeIn random">Готова стать той самой женщиной,
+          которая
+          притягивает к себе взгляды и сердца?</h2>
+        <div class="box-text">
+          <p>Не упусти свой шанс — запишись на 11-дневный интенсив Марьяны Романовой «Энергия соблазнения» прямо сейчас
+            и измени свою жизнь!</p>
+        </div>
+      </div>
 
+      <a href="#" class="btn btn-red w-100">Записаться на интенсив</a>
     </div>
   </section>
 
   <section class="prices">
     <div class="container">
-      <h2 class="animation-title">Варианты участия</h2>
+      <h2 class="wow animation-title cssanimation leFadeIn random">Варианты участия</h2>
 
       <div class="w-100">
         <div class="row">
@@ -170,12 +459,14 @@
               <div class="price-card__body">
                 <h4>Для кого:</h4>
                 <div class="box-text">
-                  <p>для женщин, которые хотят получить максимальный результат от интенсива и персональное сопровождение эксперта.</p>
+                  <p>для женщин, которые хотят получить максимальный результат от интенсива и персональное сопровождение
+                    эксперта.</p>
                 </div>
                 <h4>Что входит:</h4>
                 <ul class="list-check my-ul">
                   <li>Всё из тарифа «Продвинутый»</li>
-                  <li>Два индивидуальных сеанса коучинга с Марьяной Романовой для глубокого анализа и работы с энергией.</li>
+                  <li>Два индивидуальных сеанса коучинга с Марьяной Романовой для глубокого анализа и работы с энергией.
+                  </li>
                   <li>Эксклюзивные техники и практики, не включенные в основной курс.</li>
                   <li>Пожизненный доступ к материалам интенсива.</li>
                 </ul>
@@ -193,8 +484,8 @@
 
   <section class="callback">
     <div class="container">
-      <h2 class="animation-title">Если у вас возникли трудности
-        с оплатой или другие вопросы, <span class="color-red">пожалуйста, свяжитесь с нами</span></h2>
+      <h2 class="wow animation-title cssanimation leFadeIn random">Если у вас возникли трудности
+        с оплатой или другие вопросы, пожалуйста, свяжитесь с нами</h2>
       <div class="btn-group">
         <a href="#" class="btn btn-blue">
           <svg class="svg-icon">
@@ -241,10 +532,12 @@
 
   <!-- add plugins js-->
   <script src="js/jquery.min.js"></script>
-  <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
-  <script src="js/slick.min.js"></script>
-  <script src="js/jquery.maskedinput.min.js"></script>
+  <!-- <script src="js/slick.min.js"></script> -->
+  <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/letteranimation.min.js"></script>
+  <script src="js/wow.js"></script>
   <!-- add plugins js end-->
+
 
   <script src="js/common.js"></script>
 
