--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <div class="slogan-time">
           <p>Раскрой свою внутреннюю магию за 11 дней</p>
         </div>
+        <div class="date-project d-tablet">
+          <p>Старт:</p>
+          <span>1 октября</span>
+        </div>
         <a href="#callbackModal" class="btn btn-red w-100 open_modal">Записаться на интенсив</a>
       </div>
       <div class="main-image main-image-right">
@@ -165,7 +169,7 @@
           <div class="col-50">
             <h2>Эта программа создана для того, <span class="color-red">чтобы ты перестала быть невидимой.</span></h2>
           </div>
-          <div class="col-50">
+          <div class="col-50 d-pc">
             <div class="fantasy-content w-100">
               <div class="fantasy-box">
                 <img src="img/fantasy1.svg" alt="" class="fantasy-box__bg">
@@ -203,10 +207,53 @@
               </div>
             </div>
           </div>
+
+          <div class="col-50 d-tablet mb-20">
+            <div class="fantasy-box">
+              <img src="img/fantasy1.svg" alt="" class="fantasy-box__bg">
+              <div class="box-text">
+                <p>Представь, что через 11 дней ты станешь той женщиной, <strong>которая своим присутствием
+                    вызывает восхищение и желание.</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 d-tablet mb-20">
+            <div class="fantasy-box">
+              <img src="img/fantasy2.svg" alt="" class="fantasy-box__bg">
+              <div class="box-text">
+                <p>Ты станешь магической силой, которая привлекает любого мужчину, <strong>заставляя его хотеть только
+                    тебя.</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 d-tablet mb-20">
+            <div class="fantasy-box">
+              <img src="img/fantasy1.svg" alt="" class="fantasy-box__bg">
+              <div class="box-text">
+                <p>Ты сможешь завоевать сердце того, о ком мечтала, и навсегда <strong>избавиться от чувства
+                    одиночества.</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 d-tablet mb-20">
+            <div class="fantasy-box">
+              <img src="img/fantasy2.svg" alt="" class="fantasy-box__bg">
+              <div class="box-text">
+                <p>Ты будешь готова к тому, чтобы наконец-то создать ту самую семью, о которой ты мечтала,
+                  <strong>выйти
+                    замуж и быть любимой.</strong>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-50 d-tablet mb-20">
+            <div class="fantasy-box">
+              <img src="img/fantasy1.svg" alt="" class="fantasy-box__bg">
+              <h4>Неважно, что было в твоей жизни до этого момента — у тебя есть шанс всё изменить.</h4>
+            </div>
+          </div>
         </div>
       </div>
-
-
     </div>
   </section>
 
