--- a/index.html
+++ b/index.html
@@ -992,8 +992,8 @@
       <div class="reviews-content">
         <h2>Отзывы и кейсы</h2>
 
-        <div class="w-100">
-          <div class="horizontal-scroll">
+        <div class="reviews-slider">
+          <div class="slick-slide">
             <div class="reviews-card">
               <h3>Анна, 32 года</h3>
               <div class="box-text">
@@ -1002,6 +1002,8 @@
                   и люди начали замечать меня, как никогда раньше!</p>
               </div>
             </div>
+          </div>
+          <div class="slick-slide">
             <div class="reviews-card">
               <h3>Мария, 28 лет</h3>
               <div class="box-text">
@@ -1030,7 +1032,7 @@
         </div>
 
         <div class="bonuses-card bonuses-card2">
-          <div class="subtitle">{ бонус 1 }</div>
+          <div class="subtitle">{ бонус 2 }</div>
           <h4>Чек-лист <br>
             «Энергия на каждый день»</h4>
           <div class="box-text">
@@ -1118,7 +1120,7 @@
                 <div class="price">7 900 руб.</div>
               </div>
               <div class="price-card__footer">
-                <a href="#" class="btn btn-red">оплатить</a>
+                <a href="#payModal" class="btn btn-red open_modal">оплатить</a>
               </div>
             </div>
           </div>
@@ -1128,7 +1130,7 @@
               <div class="price-card__head">
                 <img src="img/price-bg2.svg" alt="" class="price-card__bg">
                 <span class="subtext">{ тариф }</span>
-                <h3>продви<span>-</span>нутый</h3>
+                <h3>продви<span>-</span><br>нутый</h3>
               </div>
               <div class="price-card__body">
                 <h4>Для кого:</h4>
@@ -1147,7 +1149,7 @@
                 <div class="price">60 000 руб.</div>
               </div>
               <div class="price-card__footer">
-                <a href="#" class="btn btn-red">оплатить</a>
+                <a href="#payModal" class="btn btn-red open_modal">оплатить</a>
               </div>
             </div>
           </div>
@@ -1175,7 +1177,7 @@
                 <div class="price">100 000 руб.</div>
               </div>
               <div class="price-card__footer">
-                <a href="#" class="btn btn-red">оплатить</a>
+                <a href="#payModal" class="btn btn-red open_modal">оплатить</a>
               </div>
             </div>
           </div>
@@ -1237,6 +1239,13 @@
         <span class="modal__close"><img src="img/plus.svg" alt=""></span>
         modal-code
     </div>
+</div>
+
+<div class="modal__div" id="payModal">
+  <div class="modal__wrapper">
+      <span class="modal__close"><img src="img/plus.svg" alt=""></span>
+      modal-code payment
+  </div>
 </div>
 <!-- Пoдлoжкa -->
 <div class="overlay"></div>
